--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
+    "framer-motion": "^12.29.2",
     "mercadopago": "^2.12.0",
     "next": "16.1.6",
     "react": "19.2.3",
